solc_ossfuzz_seed_corpus/test_sol/test_d910f93b8daf1c4cacf309e0ec65803265af290b74edc1cf5048a68fa20228c1_f78ad75643fcf4b04949cc0e1e003c032dd9c78a_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(function () external   returns (int96, function () internal   returns (uint208, bool), uint208) i0) external    returns(bytes memory o0)
  {
  }
  function f1() external    returns(bytes3 o0,uint208 o1)
  {
  }
  function f2() external    returns(address payable o0,bytes22 o1)
  {
  }
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
function f3()     returns(bool o0,bool o1)
{
}
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:66-113): Internal type cannot be used for external function type.
